--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -7,17 +7,34 @@
   </div>
 
   <div class="control-panel">
-    <div>left color</div>
+    <div class="color-info-container">
+      <app-color-options
+        [color]="colors[0]"
+        [position]="position"
+      ></app-color-options>
+    </div>
     <div class="controller-area">
       <div class="controller">
-        <div class="button left" (click)="changeNumOfColors(-1)">-</div>
+        <div class="numerator-button left" (click)="changeNumOfColors(-1)">
+          -
+        </div>
         <div>{{ numOfColors }}</div>
-        <div class="button right" (click)="changeNumOfColors(+1)">+</div>
+        <div class="numerator-button right" (click)="changeNumOfColors(+1)">
+          +
+        </div>
       </div>
+
       <div>
-        <button mat-button (click)="updatePalette()">update palette</button>
+        <div class="update-button" (click)="updatePalette()">
+          <p>Update Palette</p>
+        </div>
       </div>
     </div>
-    <div>right color</div>
+    <div class="color-info-container">
+      <app-color-options
+        [color]="colors[colors.length - 1]"
+        [position]="!position"
+      ></app-color-options>
+    </div>
   </div>
 </div>
