--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -18,7 +18,10 @@
         <div class="numerator-button left" (click)="changeNumOfColors(-1)">
           -
         </div>
-        <div>{{ numOfColors }}</div>
+        <div>
+          {{ numOfColors }}
+        </div>
+
         <div class="numerator-button right" (click)="changeNumOfColors(+1)">
           +
         </div>
