--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -28,7 +28,7 @@ app-color-box {
 }
 .color-info-container {
   justify-content: space-between;
-  background-color: aqua;
+  // background-color: aqua;
   flex-basis: 40%;
 }
 .controller {
