--- a/src/app/components/color-options/color-options.component.html
+++ b/src/app/components/color-options/color-options.component.html
@@ -1,17 +1,27 @@
-<div class="container">
+<div class="container" (mouseleave)="updateBaseColor()">
   <div
     *ngIf="position"
     class="color-indicator"
-    [style.backgroundColor]="color.hex.value"
+    [style.backgroundColor]="selectedColor"
+    [style.color]="selectedColor"
+    [cpPosition]="'bottom'"
+    [cpPositionOffset]="'50%'"
+    [cpPositionRelativeToArrow]="true"
+    [(colorPicker)]="selectedColor"
   >
-    left color
+    left
   </div>
-  <div class="color-options">color options here</div>
+  <div class="color-options"></div>
   <div
     *ngIf="!position"
     class="color-indicator"
-    [style.backgroundColor]="color.hex.value"
+    [style.backgroundColor]="selectedColor"
+    [style.color]="selectedColor"
+    [cpPosition]="'bottom'"
+    [cpPositionOffset]="'50%'"
+    [cpPositionRelativeToArrow]="true"
+    [(colorPicker)]="selectedColor"
   >
-    left color
+    right
   </div>
 </div>
